Ajout de nouvelles pages & corrections de bugs

--- a/templates/gui/footer.html.twig
+++ b/templates/gui/footer.html.twig
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="row g-0 justify-content-between fs--1 mt-4 mb-3">
         <div class="col-12 col-sm-auto text-center">
-            <p class="mb-0 text-600">{{ "now" | date('Y' )}} &copy; Inventaire <span class="d-none d-sm-inline-block"> | </span><br class="d-sm-none" /> Réalisé par <a class="link">ASV Packaging</a></p>
+            <p class="mb-0 text-600">{{ "now" | date('Y' )}} &copy; Inventaire <span class="d-none d-sm-inline-block"> | </span><br class="d-sm-none" /> Réalisé par <a class="link" href="https://www.asv-packaging.org/" target="_blank">ASV Packaging</a></p>
         </div>
         <div class="col-12 col-sm-auto text-center">
             <p class="mb-0 text-600">v1.0</p>
