--- a/templates/pc_fixe/add.html.twig
+++ b/templates/pc_fixe/add.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Ajouter un PC Fixe | Inventaire{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
-    <link href="{{ asset('assets/vendors/choices/choices.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/select2-bootstrap-5-theme/select2-bootstrap-5-theme.min.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
@@ -38,24 +39,34 @@
                     </div>
                     <div class="card-body bg-light">
                         {{ form_start(pcFixeForm) }}
-                            {{ form_row(pcFixeForm.nom) }}
-                            {{ form_row(pcFixeForm.ip) }}
-                            {{ form_row(pcFixeForm.marque) }}
-                            {{ form_row(pcFixeForm.modele) }}
-                            {{ form_row(pcFixeForm.utilisateur, {'placeholder': 'Choisir un utilisateur'}) }}
-                            {{ form_row(pcFixeForm.processeur) }}
-                            {{ form_row(pcFixeForm.memoire) }}
-                            {{ form_row(pcFixeForm.stockage_nombre) }}
-                            {{ form_row(pcFixeForm.stockage, {'placeholder': 'Choisir un type de stockage'}) }}
-                            {{ form_row(pcFixeForm.systeme_exploitation, {'placeholder': 'Choisir un système d\'exploitation'}) }}
-                            {{ form_row(pcFixeForm.numero_serie) }}
-                            {{ form_row(pcFixeForm.emplacement, {'placeholder': 'Choisir un emplacement'}) }}
-                            {{ form_row(pcFixeForm.etat, {'placeholder': 'Choisir un état'}) }}
-                            {{ form_row(pcFixeForm.date_achat) }}
-                            {{ form_row(pcFixeForm.date_garantie) }}
-                            {{ form_row(pcFixeForm.commentaire) }}
-                            <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                            <div class="row">
+                                {{ form_row(pcFixeForm.nom) }}
+                                {{ form_row(pcFixeForm.ip) }}
+                                {{ form_row(pcFixeForm.marque) }}
+                                {{ form_row(pcFixeForm.modele) }}
+                                {{ form_row(pcFixeForm.utilisateur) }}
+                                {{ form_row(pcFixeForm.processeur) }}
+                                {{ form_row(pcFixeForm.memoire) }}
+                                    {{ form_row(pcFixeForm.stockage_nombre) }}
+                                <div class="col-lg-6">
+                                    {{ form_row(pcFixeForm.stockage) }}
+                                </div>
+                                <div class="col-lg-6">
+                                    {{ form_row(pcFixeForm.stockage_type) }}
+                                </div>
+                                {{ form_row(pcFixeForm.systeme_exploitation) }}
+                                {{ form_row(pcFixeForm.numero_serie) }}
+                                {{ form_row(pcFixeForm.emplacement) }}
+                                {{ form_row(pcFixeForm.entreprise) }}
+                                {{ form_row(pcFixeForm.fournisseur) }}
+                                {{ form_row(pcFixeForm.etat) }}
+                                {{ form_row(pcFixeForm.date_installation) }}
+                                {{ form_row(pcFixeForm.date_achat) }}
+                                {{ form_row(pcFixeForm.date_garantie) }}
+                                {{ form_row(pcFixeForm.commentaire) }}
+                                <div class="d-flex justify-content-end">
+                                    <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                                </div>
                             </div>
                         {{ form_end(pcFixeForm) }}
                     </div>
@@ -65,6 +76,6 @@
     </div>
 {% endblock %}
 {% block javascripts %}
+    <script src="{{ asset('assets/vendors/select2/select2.min.js') }}"></script>
     <script src="{{ asset('assets/js/flatpickr.js') }}"></script>
-    <script src="{{ asset('assets/vendors/choices/choices.min.js') }}"></script>
 {% endblock %}
