--- a/templates/pc_portable/edit.html.twig
+++ b/templates/pc_portable/edit.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Éditer le PC Portable | Inventaire{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
-    <link href="{{ asset('assets/vendors/choices/choices.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/select2-bootstrap-5-theme/select2-bootstrap-5-theme.min.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
@@ -38,24 +39,34 @@
                     </div>
                     <div class="card-body bg-light">
                         {{ form_start(pcPortableForm) }}
-                            {{ form_row(pcPortableForm.nom) }}
-                            {{ form_row(pcPortableForm.ip) }}
-                            {{ form_row(pcPortableForm.marque) }}
-                            {{ form_row(pcPortableForm.modele) }}
-                            {{ form_row(pcPortableForm.utilisateur, {'placeholder': 'Choisir un utilisateur'}) }}
-                            {{ form_row(pcPortableForm.processeur) }}
-                            {{ form_row(pcPortableForm.memoire) }}
-                            {{ form_row(pcPortableForm.stockage_nombre) }}
-                            {{ form_row(pcPortableForm.stockage, {'placeholder': 'Choisir un type de stockage'}) }}
-                            {{ form_row(pcPortableForm.os) }}
-                            {{ form_row(pcPortableForm.numero_serie) }}
-                            {{ form_row(pcPortableForm.emplacement, {'placeholder': 'Choisir un emplacement'}) }}
-                            {{ form_row(pcPortableForm.etat, {'placeholder': 'Choisir un état'}) }}
-                            {{ form_row(pcPortableForm.date_achat) }}
-                            {{ form_row(pcPortableForm.date_garantie) }}
-                            {{ form_row(pcPortableForm.commentaire) }}
-                            <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
+                            <div class="row">
+                                {{ form_row(pcPortableForm.nom) }}
+                                {{ form_row(pcPortableForm.ip) }}
+                                {{ form_row(pcPortableForm.marque) }}
+                                {{ form_row(pcPortableForm.modele) }}
+                                {{ form_row(pcPortableForm.utilisateur) }}
+                                {{ form_row(pcPortableForm.processeur) }}
+                                {{ form_row(pcPortableForm.memoire) }}
+                                {{ form_row(pcPortableForm.stockage_nombre) }}
+                                <div class="col-lg-6">
+                                    {{ form_row(pcPortableForm.stockage) }}
+                                </div>
+                                <div class="col-lg-6">
+                                    {{ form_row(pcPortableForm.stockage_type) }}
+                                </div>
+                                {{ form_row(pcPortableForm.systeme_exploitation) }}
+                                {{ form_row(pcPortableForm.numero_serie) }}
+                                {{ form_row(pcPortableForm.emplacement) }}
+                                {{ form_row(pcPortableForm.entreprise) }}
+                                {{ form_row(pcPortableForm.fournisseur) }}
+                                {{ form_row(pcPortableForm.etat) }}
+                                {{ form_row(pcPortableForm.date_installation) }}
+                                {{ form_row(pcPortableForm.date_achat) }}
+                                {{ form_row(pcPortableForm.date_garantie) }}
+                                {{ form_row(pcPortableForm.commentaire) }}
+                                <div class="d-flex justify-content-end">
+                                    <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
+                                </div>
                             </div>
                         {{ form_end(pcPortableForm) }}
                     </div>
@@ -65,6 +76,6 @@
     </div>
 {% endblock %}
 {% block javascripts %}
+    <script src="{{ asset('assets/vendors/select2/select2.min.js') }}"></script>
     <script src="{{ asset('assets/js/flatpickr.js') }}"></script>
-    <script src="{{ asset('assets/vendors/choices/choices.min.js') }}"></script>
 {% endblock %}
