--- a/templates/telephone_fixe/edit.html.twig
+++ b/templates/telephone_fixe/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Ajouter un téléphone portable | Inventaire{% endblock %}
+{% block title %}Éditer le téléphone fixe | Inventaire{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
@@ -15,10 +15,10 @@
         </span>
         <div class="col">
             <h5 class="mb-0 text-danger position-relative">
-                <span class="bg-200 dark__bg-1100 pe-3">Téléphones portables</span>
+                <span class="bg-200 dark__bg-1100 pe-3">Téléphones fixes</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet d'ajouter un téléphone portable.</p>
+            <p class="mb-0">Cette page vous permet d'éditer un téléphone fixe.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -32,8 +32,8 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Ajouter un téléphone portable</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.telephone_portable.show') }}">
+                        <h5 class="mb-0">Éditer un téléphone fixe</h5>
+                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.telephone_fixe.show') }}">
                             Retour
                         </a>
                     </div>
@@ -43,9 +43,10 @@
                             {{ form_row(telephoneForm.marque) }}
                             {{ form_row(telephoneForm.modele) }}
                             {{ form_row(telephoneForm.utilisateur) }}
-                            {{ form_row(telephoneForm.imei1) }}
-                            {{ form_row(telephoneForm.imei2) }}
+                            {{ form_row(telephoneForm.ip) }}
+                            {{ form_row(telephoneForm.type) }}
                             {{ form_row(telephoneForm.numero_serie) }}
+                            {{ form_row(telephoneForm.emplacement) }}
                             {{ form_row(telephoneForm.entreprise) }}
                             {{ form_row(telephoneForm.fournisseur) }}
                             {{ form_row(telephoneForm.etat) }}
@@ -53,8 +54,12 @@
                             {{ form_row(telephoneForm.date_achat) }}
                             {{ form_row(telephoneForm.date_garantie) }}
                             {{ form_row(telephoneForm.commentaire) }}
+                            <label class="fw-medium">
+                                <a style="color: red">*</a>
+                                Champs obligatoires
+                            </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
                             </div>
                         {{ form_end(telephoneForm) }}
                     </div>
