--- a/templates/telephone_fixe/show.html.twig
+++ b/templates/telephone_fixe/show.html.twig
@@ -1,19 +1,19 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Téléphones portables | Inventaire{% endblock %}
+{% block title %}Téléphones fixes | Inventaire{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
         <span class="fa-stack me-2 ms-n1">
             <i class="fas fa-circle fa-stack text-300"></i>
-            <i class="fa-inverse fa-stack-1x text-danger fas fa-mobile-screen-button"></i>
+            <i class="fa-inverse fa-stack-1x text-danger fas fa-phone"></i>
         </span>
         <div class="col">
             <h5 class="mb-0 text-danger position-relative">
-                <span class="bg-200 dark__bg-1100 pe-3">Téléphones portables</span>
+                <span class="bg-200 dark__bg-1100 pe-3">Téléphones fixes</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet de voir tous les téléphones portables.</p>
+            <p class="mb-0">Cette page vous permet de voir tous les téléphones fixes.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -27,13 +27,13 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Tous les téléphones portables</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.telephone_portable.add') }}">
+                        <h5 class="mb-0">Tous les téléphones fixes</h5>
+                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.telephone_fixe.add') }}">
                             Ajouter
                         </a>
                     </div>
                     <div class="card-body bg-light">
-                        <div id="table_telephone_portable" data-list='{"valueNames":["ligne","marque","modele","utilisateur","imei1","imei2","site","fournisseur","numero_serie","date_installation","date_achat","date_garantie","etat","commentaire"],"page":20,"pagination":true}'>
+                        <div id="table_telephone_fixe" data-list='{"valueNames":["ligne","marque","modele","utilisateur","ip","type","site","fournisseur","numero_serie","date_installation","date_achat","date_garantie","etat","commentaire"],"page":20,"pagination":true}'>
                             <div class="row justify-content-end g-0">
                                 <div class="col-auto col-sm-5 mb-3">
                                     <div class="input-group">
@@ -52,9 +52,9 @@
                                             <th class="align-middle text-center">Ligne</th>
                                             <th class="align-middle text-center">Marque</th>
                                             <th class="align-middle text-center">Modèle</th>
+                                            <th class="align-middle text-center">Type</th>
+                                            <th class="align-middle text-center">IP</th>
                                             <th class="align-middle text-center">Utilisateur</th>
-                                            <th class="align-middle text-center">IMEI 1</th>
-                                            <th class="align-middle text-center">IMEI 2</th>
                                             <th class="align-middle text-center">Numéro de série</th>
                                             <th class="align-middle text-center">Site</th>
                                             <th class="align-middle text-center">Fournisseur</th>
@@ -71,8 +71,14 @@
                                             {% for telephone in telephones %}
                                                 <tr class="align-middle text-center">
                                                     <td class="text-nowrap">{{ loop.revindex }}</td>
-                                                    <td class="text-nowrap ligne">{{ telephone.ligne }}</td>
-                                                    <td class="text-nowrap">
+                                                    <td class="text-nowrap ligne">
+                                                        {% if telephone.ligne != null %}
+                                                            {{ telephone.ligne }}
+                                                        {% else %}
+                                                            <span class="badge text-bg-danger">N/A</span>
+                                                        {% endif %}
+                                                    </td>
+                                                    <td class="text-nowrap marque">
                                                         {% if telephone.marque != null %}
                                                             {{ telephone.marque }}
                                                         {% else %}
@@ -86,23 +92,25 @@
                                                             <span class="badge text-bg-danger">N/A</span>
                                                         {% endif %}
                                                     </td>
+                                                    <td class="text-nowrap type">
+                                                        {% if telephone.type == "DECT" %}
+                                                            <span class="badge text-bg-info">DECT</span>
+                                                        {% elseif telephone.type == "Fixe" %}
+                                                            <span class="badge text-bg-info">Fixe</span>
+                                                        {% else %}
+                                                            <span class="badge text-bg-info">N/A</span>
+                                                        {% endif %}
+                                                    </td>
+                                                    <td class="text-nowrap ip">
+                                                        {% if telephone.ip != null %}
+                                                            {{ telephone.ip }}
+                                                        {% else %}
+                                                            <span class="badge text-bg-danger">N/A</span>
+                                                        {% endif %}
+                                                    </td>
                                                     <td class="text-nowrap utilisateur">
                                                         {% if telephone.utilisateur_nom != null or telephone.utilisateur_prenom != null %}
                                                             {{ telephone.utilisateur_nom }} {{ telephone.utilisateur_prenom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap imei1">
-                                                        {% if telephone.imei1 != null %}
-                                                            {{ telephone.imei1 }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap imei2">
-                                                        {% if telephone.imei2 != null %}
-                                                            {{ telephone.imei2 }}
                                                         {% else %}
                                                             <span class="badge text-bg-danger">N/A</span>
                                                         {% endif %}
@@ -164,11 +172,11 @@
                                                         {% endif %}
                                                     </td>
                                                     <td class="text-nowrap">
-                                                        <a href="{{ path('admin.telephone_portable.edit', {id: telephone.id}) }}" class="btn btn-primary btn-sm">
+                                                        <a href="{{ path('admin.telephone_fixe.edit', {id: telephone.id}) }}" class="btn btn-primary btn-sm">
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
-                                                        <form method="post" action="{{ path('admin.telephone_portable.delete', {id: telephone.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer le téléphone portable avec la ligne : \'{{ telephone.ligne }}\' ?')">
+                                                        <form method="post" action="{{ path('admin.telephone_fixe.delete', {id: telephone.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer le téléphone {{ telephone.type }} avec la ligne : \'{{ telephone.ligne }}\' ?')">
                                                             <input type="hidden" name="_method" value="DELETE">
                                                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ telephone.id) }}">
                                                             <button class="btn btn-danger btn-sm">
@@ -180,7 +188,7 @@
                                             {% endfor %}
                                         {% else %}
                                             <tr class="align-middle text-center">
-                                                <td colspan="12">Aucun téléphone portable n'a été trouvé.</td>
+                                                <td colspan="12">Aucun téléphone fixe n'a été trouvé.</td>
                                             </tr>
                                         {% endif %}
                                     </tbody>
